@@ -1,12 +1,13 @@
-image: bionic
+dist: bionic
 language: python
 python:
   - 3.6
 
 install:
   - pip install --upgrade pip
-  - pip install -r requirements.txt
-  - pip install .
+  - pip install pipenv
+  - pipenv install --dev
+  - python3 setup.py install
   - pip freeze
 
 script:
