@@ -6,6 +6,7 @@ verify_ssl = true
 [dev-packages]
 pbr = "*"
 pytest = "*"
+pytest-flakes = "*"
 setuptools = "*"
 twine = "*"
 urllib3 = "*"
